# fastapi-admin-next

./: .gitignore  .pre-commit-config.yaml  README.md  note.txt  pyproject.toml  setup.cfg  user_database.db
changelog.d/: 20241224_213833_0.1.0.rst  20241226_174502_0.1.1.rst
example/: app.py
fastapi_admin_next/: controllers.py  db_connect.py  main.py  registry.py  schemas.py  service.py
fastapi_admin_next/controllers/: admin.py
fastapi_admin_next/services/: admin.py
fastapi_admin_next/templates/: base.html  list.html  update.html
fastapi_admin_next/templates/partials/: sidebar.html
tests/: test_crud.py  test_service.py  utils.py
